--- a/web/about.html
+++ b/web/about.html
@@ -5,24 +5,80 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Solace Of Service</title>
 		<link rel="stylesheet" href="main.css" />
-		<link rel="icon" type="image/x-icon" href="./img/favicon.png" />
+		<link rel="icon" type="image/x-icon" href="./img/SOS_Logo_WBG.png" />
 	</head>
 	<body class="h-screen w-screen main-colour">
-		<nav
-			class="flex w-full h-20 secondary-colour fixed top-0 left-0 right-0 border-b-4 border-black"
-		>
+		<header class="flex w-full h-20 secondary-colour fixed top-0 left-0 right-0">
 			<img src="./img/SOS_Logo_WBG.png" alt="product logo" class="p-1 ml-10" />
-			<div class="w-full flex justify-around">
+			<nav class="w-full flex justify-around">
 				<a href="./index.html" class="px-4 text-justify h-fit w-fit self-center"
 					><h1>Home</h1></a
 				>
 				<a href="#" class="px-4 text-justify h-fit w-fit self-center"
 					><h1>About SSLR</h1></a
 				>
-				<a href="#" class="px-4 text-justify h-fit w-fit self-center"><h1>Profile</h1></a>
+				<a href="./profile.html" class="px-4 text-justify h-fit w-fit self-center"
+					><h1>Profile</h1></a
+				>
+			</nav>
+		</header>
+		<div class="h-20"></div>
+		<section class="flex justify-center py-10 px-[15vw] flex-col">
+			<img
+				src="./img/SSLR_CompanyLogo.png"
+				alt="Logo Of SSLR"
+				class="py-4 h-[30vw] w-[30vw] self-center"
+			/>
+			<h1 class="font-bold text-4xl text-center">About SSLR</h1>
+		</section>
+		<section class="section-colour h-fit w-full py-10 px-[15vw]">
+			<h2>
+				"Sweet Starry Lil’ Rabbits" is a name born from the shared initials of our four
+				founders—Sai, Shannon, Livinia, and Ryan. Our name reflects not only who we are
+				but also the spirit we want to bring to the world: a blend of sweetness,
+				imagination, and individuality.
+				<br />
+				<br />
+				As a close-knit group of friends who came together with a shared vision of
+				creating something extraordinary, we chose "Sweet Starry Lil’ Rabbits" because it
+				captures our playful and welcoming personalities while standing out as uniquely
+				memorable. It’s a name that symbolizes our friendship, creativity, and desire to
+				build experiences that feel comforting and inspiring, hoping to invite others into
+				a world of warmth, wonder, and connection—qualities that define both our company
+				and our dynamic as a team.
+			</h2>
+		</section>
+		<section class="h-fit w-full y py-8 px-[15vw]">
+			<h1 class="text-2xl font-bold pb-2">WHO ARE WE</h1>
+			<div class="flex">
+				<article class="w-[20%] mx-[2.5%]">
+					<h1>Shannon</h1>
+					<img src="" alt="picture of Shannon" />
+					<h2><b>Roles:</b>Scrum Master,Art Director, Assistant Level Designer</h2>
+				</article>
+				<article class="w-[20%] mx-[2.5%]">
+					<h1>Ryan</h1>
+					<img src="" alt="picture of Ryan" />
+					<h2>
+						<b>Roles:</b>Product Owner, Lead Web Developer , Assistant Game Develope
+					</h2>
+				</article>
+				<article class="w-[20%] mx-[2.5%]">
+					<h1>Sai</h1>
+					<img src="" alt="picture of Sai" />
+					<h2>
+						<b>Roles:</b>Lead Game Designer, Marketing Lead, Assistant Web Developer
+					</h2>
+				</article>
+				<article class="w-[20%] mx-[2.5%]">
+					<h1>Livinia</h1>
+					<img src="" alt="picture of Livinia" />
+					<h2>
+						<b>Roles:</b>Lead Game Developer, UI/UX Lead, Assistant Graphic Designer
+					</h2>
+				</article>
 			</div>
-		</nav>
-
+		</section>
 		<footer class="secondary-colour h-40">
 			<h2></h2>
 		</footer>
