web: updated pages

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,21 +24,26 @@
 			<img
 				src="./img/gameSSPlaceholder.jpg"
 				alt="image of game"
-				class="w-2/3 aspect-video"
+				class="w-2/3 aspect-video"	
 			/>
 		</section>
-		<section class="section-colour h-fit w-full py-8 px-[15vw]">
-			<h1 class="text-2xl font-bold pb-2">SYNOPSIS</h1>
-			<h2>
-				In Solace of Service, players step into the role of an administrator at a busy
-				social service center, where each day presents a new challenge that tests their
-				compassion, critical thinking, and resource management skills. The objective is to
-				sort individuals from diverse backgrounds based on their specific needs and direct
-				them to the appropriate sectors for assistance. This game tests players compassion
-				and learning when to step up and help others in need. The experience is both
-				demanding and rewarding, as players navigate the complexities of helping others
-				while ensuring that no one is left behind.
-			</h2>
+		<section class="section-colour h-fit w-full py-10 pr-[7vw] pl-28">
+			<h1 class="text-2xl font-bold pb-2 px-37">SYNOPSIS</h1>
+			<div class="flex flex-row">
+				<img width="150" src="./img/SOS_Logo_WBG.png" alt="SSLR Logo"/>
+				<h2>
+					In Solace of Service, players step into the role of an administrator at a busy
+					social service center, where each day presents a new challenge that tests their
+					compassion, critical thinking, and resource management skills. The objective is to
+					sort individuals from diverse backgrounds based on their specific needs and direct
+					them to the appropriate sectors for assistance. This game tests players compassion
+					and learning when to step up and help others in need. The experience is both
+					demanding and rewarding, as players navigate the complexities of helping others
+					while ensuring that no one is left behind.
+				</h2>
+				
+			</div>
+			
 		</section>
 		<section class="h-fit w-full y py-8 px-[15vw]">
 			<h1 class="text-2xl font-bold pb-2">OUR GOAL</h1>
@@ -75,13 +80,17 @@
 					alt="picture of a meta quest 2"
 					class="h-full aspect-video"
 				/>
-				<div class="px-2.5">
-					<h2 class="font-bold">Minimum</h2>
+				<div class="px-15">
+					<h2 class="font-bold text-[25px]">Minimum</h2>
 					<ul>
-						<li>OS: Meta Horizon OS</li>
-						<li>Chipset: Qualcomm Snapdragon XR2.</li>
-						<li>GPU: Qualcomm Adreno 650.</li>
-						<li>RAM: 6 GB</li>
+						<br>
+						<li class="text-[25px]">OS: Meta Horizon OS</li>
+						<br>
+						<li class="text-[25px]">Chipset: Qualcomm Snapdragon XR2.</li>
+						<br>
+						<li class="text-[25px]">GPU: Qualcomm Adreno 650.</li>
+						<br>
+						<li class="text-[25px]">RAM: 6 GB</li>
 					</ul>
 				</div>
 			</div>
@@ -93,8 +102,7 @@
 				>Click here for download</a
 			>
 		</section>
-		<footer class="secondary-colour h-40">
-			<h2></h2>
-		</footer>
+		
+		
 	</body>
 </html>
