--- a/web/public/about.html
+++ b/web/public/about.html
@@ -23,15 +23,22 @@
 			</nav>
 		</header>
 		<div class="h-20"></div>
-		<section class="flex justify-center py-10 px-[15vw] flex-col">
+		<section class="flex justify-center py-10 px-[15vw] flex-row">
 			<img
 				src="./img/SSLR_CompanyLogo.png"
 				alt="Logo Of SSLR"
-				class="py-4 h-[30vw] w-[30vw] self-center"
+				class="py-4 h-[30vw] w-[30vw] self-start"
 			/>
-			<h1 class="font-bold text-4xl text-center">About SSLR</h1>
+			<img
+			src="./img/SOS_Logo_WBG.png"
+			alt="Logo Of Our Game"
+			class="py-4 h-[30vw] w-[30vw] self-end"
+			/>
+			
 		</section>
 		<section class="section-colour h-fit w-full py-10 px-[15vw]">
+			<h1 class="font-bold text-4xl text-center">About SSLR</h1>
+			<br>
 			<h2>
 				"Sweet Starry Lil’ Rabbits" is a name born from the shared initials of our four
 				founders—Sai, Shannon, Livinia, and Ryan. Our name reflects not only who we are
@@ -51,36 +58,34 @@
 		<section class="h-fit w-full y py-8 px-[15vw]">
 			<h1 class="text-2xl font-bold pb-2">WHO ARE WE</h1>
 			<div class="flex">
-				<article class="w-[20%] mx-[2.5%]">
-					<h1>Shannon</h1>
-					<img src="" alt="picture of Shannon" />
-					<h2><b>Roles:</b>Scrum Master,Art Director, Assistant Level Designer</h2>
+				<article class="w-[35%]  mx-[2.5%]">
+					<h1 class= "font-bold">Shannon</h1>
+					<img class="aspect-auto rounded-full w-60 h-60" src="./img/Shannon.jpg" alt="picture of Shannon" />
+					<h2><b>Roles: </b>Scrum Master,Art Director, Assistant Level Designer</h2>
 				</article>
-				<article class="w-[20%] mx-[2.5%]">
-					<h1>Ryan</h1>
-					<img src="" alt="picture of Ryan" />
+				<article class="w-[35%] mx-[2.5%]">
+					<h1 class="font-bold">Ryan</h1>
+					<img class="aspect-auto rounded-full" src="./img/Ryan.jpg" alt="picture of Ryan" />
 					<h2>
-						<b>Roles:</b>Product Owner, Lead Web Developer , Assistant Game Develope
+						<b>Roles: </b>Product Owner, Lead Web Developer , Assistant Game Develope
 					</h2>
 				</article>
-				<article class="w-[20%] mx-[2.5%]">
-					<h1>Sai</h1>
-					<img src="" alt="picture of Sai" />
+				<article class="w-[35%] mx-[2.5%]">
+					<h1 class="font-bold">Sai</h1>
+					<img class="aspect-auto rounded-full" src="./img/Sai.jpg" alt="picture of Sai" />
 					<h2>
-						<b>Roles:</b>Lead Game Designer, Marketing Lead, Assistant Web Developer
+						<b>Roles:  </b>Lead Game Designer, Marketing Lead, Assistant Web Developer
 					</h2>
 				</article>
-				<article class="w-[20%] mx-[2.5%]">
-					<h1>Livinia</h1>
-					<img src="" alt="picture of Livinia" />
+				<article class="w-[30%] mx-[2.5%]">
+					<h1 class="font-bold">Livinia</h1>
+					<img class="aspect-auto rounded-full" src="./img/Livinia.jpg" alt="picture of Livinia" />
 					<h2>
-						<b>Roles:</b>Lead Game Developer, UI/UX Lead, Assistant Graphic Designer
+						<b>Roles: </b>Lead Game Developer, UI/UX Lead, Assistant Graphic Designer
 					</h2>
 				</article>
 			</div>
 		</section>
-		<footer class="secondary-colour h-40">
-			<h2></h2>
-		</footer>
+		
 	</body>
 </html>
