--- a/web/public/profile.html
+++ b/web/public/profile.html
@@ -106,14 +106,15 @@
 			</form>
 		</dialog>
 		<section class="h-fit w-full py-10 px-[15vw]">
-			<b>Profile</b>
-			<img src="" class="" alt="Profile picture" />
-			<h1><b>Name:</b></h1>
-			<h1><b>Score:</b></h1>
-			<h1><b>Days Played:</b></h1>
-			<h1><b>Customers Helped Correct:</b></h1>
-			<h1><b>Customers Helped Wrongly:</b></h1>
-			<h1><b>Accuracy:</b></h1>
+			<img src="./img/SSLR_CopyrightLogo.png" alt="Logo Of SSLR" class="py-20 " />
+			<b hidden>Profile</b>
+			<img hidden src="" class="" alt="Profile picture" />
+			<h1 hidden><b>Name:</b></h1>
+			<h1 hidden><b>Score:</b></h1>
+			<h1 hidden><b>Days Played:</b></h1>
+			<h1 hidden><b>Customers Helped Correct:</b></h1>
+			<h1 hidden><b>Customers Helped Wrongly:</b></h1>
+			<h1 hidden><b>Accuracy:</b></h1>
 		</section>
 
 		<script  src="./profile.js"></script>
